--- a/prometheus_assignment/prometheus.yml
+++ b/prometheus_assignment/prometheus.yml
@@ -13,3 +13,7 @@ scrape_configs:
   - job_name: 'postgres_exporter'
     static_configs:
       - targets: ['postgres_exporter:9187']
+
+  - job_name: "custom_exporter"
+    static_configs:
+      - targets: ['custom_exporter:8000']
